<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/details_tv_bio">

                <ImageView
                    android:id="@+id/detailsIvAvatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerCrop"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_tv_name"
                        style="@style/TextContent.Secondary"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        tools:ignore="TextContrastCheck"
                        tools:text="@string/name_placeholder" />

                    <TextView
                        android:id="@+id/details_tv_username"
                        style="@style/TextContent.SubtitleDetails"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/details_tv_name"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detailsIvAvatar"
                        app:layout_constraintTop_toBottomOf="@+id/details_tv_name"
                        tools:ignore="TextContrastCheck"
                        tools:text="@string/username_placeholder" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/details_tv_bio"
                style="@style/TextContent.SubtitleDetails"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:text="@string/details_bio" />

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/tabs"
                app:layout_constraintTop_toBottomOf="@+id/details_tv_bio">

                <TextView
                    android:id="@+id/details_tv_follower"
                    style="@style/TextContent.Details"
                    android:layout_weight="1"
                    tools:text="@string/follower"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/details_tv_following"
                    style="@style/TextContent.Details"
                    android:layout_weight="1"
                    tools:text="@string/following"
                    android:textAlignment="center" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_margin="8dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    app:tabIndicatorColor="@color/secondary"
                    app:tabRippleColor="@color/secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    app:tabTextColor="@color/white"
                    app:tabTextAppearance="@style/TextContent.Details"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>